Minor pom.xml refactoring